<resources>
    <string name="app_name">ParkHere</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="Search">Search in list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileLabel">Profile</string>
    <string name="edit">Edit</string>
    <string name="userProfilePictureDescription">User\'s Profile Picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="history">History</string>
    <string name="phone">Phone</string>
    <string name="searchParkingHint">Enter location</string>
    <string name="newListing">List</string>
    <string name="listingParkingLabel">Listing A New Parking Space</string>
    <string name="owner">Owner</string>
    <string name="price">Price</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="dateSample">mm/dd/yyyy</string>
    <string name="priceSample">decimal, $ by default</string>
    <string name="finish">Finish</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="sampleTime">5:00 PM</string>
    <string name="sampleDistance">1.5 miles away</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="available">Available</string>
    <string name="distance">Distance</string>
    <string name="searchParking">Search Parkings</string>
    <string name="specialInstruction">Special Instruction</string>
    <string name="reserve">Reserve</string>
    <string name="results">Results</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="logOut">Log Out</string>
    <string name="streetAddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zip Code</string>
    <string name="bookings">Bookings</string>
    <string name="listings">Listings</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="addressInvalid">The address is invalid, please try again</string>
    <string name="editProfile">Edit Photo</string>
    <string name="chooseFromGallery">Choose From Gallery</string>
    <string name="takeAPhoto">Take A Photo</string>
    <string name="Messaging">Messaging</string>
    <string name="specialInstructionHint">special instruction if any</string>
    <string name="editListingPage">Edit Listing Page</string>
    <string name="save">Save</string>
    <string name="review">Review</string>
    <string name="reviewHint">give a description about your experience</string>
    <string name="submit">Submit</string>
    <string name="reservations">Reservations</string>
    <string name="addParkingSpace">Add Parking Space</string>
    <string name="pickParkingSpace">Pick A Parking Space</string>
    <string name="postListing">Post A New Listing</string>
    <string name="viewParkingSpaces">View Parking Spaces</string>
    <string name="myParkingSpaces">My Parking Spaces</string>
    <string name="parkingID">Parking ID</string>
    <string name="delete">Delete</string>
    <string name="title_activity_detail_parking_space">DetailParkingSpaceActivity</string>
    <string name="createParkingSpace">Create A New Parking Space</string>
    <string name="editParkingSpace">Edit Parking Space</string>
    <string name="numReviewsSample">(0 reviews)</string>
    <string name="reviewDescriptionSample">Great parking</string>
    <string name="writtenBy">Written by:</string>
    <string name="reviews">Reviews</string>
    <string name="Users">Users</string>
    <string name="chats">chats</string>
    <string name="chatsOfUsersDatabaseField">chats</string>
    <string name="membersOfChats">membersOfChats</string>
    <string name="currentlyChatWiths">currentlyChatWiths</string>
    <string name="currentLocation">Search with current Location</string>
    <string name="Search_in_map">Search in Map</string>
    <string name="countTier1">10</string>
    <string name="countTier2">20</string>
    <string name="countTier3">50</string>
    <string name="lessCountTier1"><![CDATA[< 10]]></string>
    <string name="lessCountTier2"><![CDATA[< 20]]></string>
    <string name="lessCountTier3"><![CDATA[< 50]]></string>
    <string name="greaterCountTier4"><![CDATA[>= 50]]></string>
    <string name="parking_space_been_booked_for_times">Parking space been booked for times</string>
    <string name="haveBeenBookedCount">haveBeenBookedCount</string>
    <string name="ParkingSpaces">ParkingSpaces</string>


</resources>
