<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/profile_item_padding"
    android:paddingRight="@dimen/profile_item_padding"
    tools:context="edu.sjsu.team408.parkhere.EditProfileActivity">

    <TextView
        android:id="@+id/editProfileLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:text="@string/profileLabel"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/editProfilePicture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/userProfilePictureDescription"
            android:src="@drawable/common_google_signin_btn_icon_dark_normal" />

        <Button
            android:id="@+id/profileEditPhotoBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editProfile" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editUserFullNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUserFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editUserEmailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUserEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editUserPhoneLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUserPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editUserAddressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUserAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save" />
    </LinearLayout>

</LinearLayout>
