<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/profile_item_padding"
    android:paddingRight="@dimen/profile_item_padding"
    tools:context="edu.sjsu.team408.parkhere.HistoryFragment">

    <TextView
        android:id="@+id/historyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:text="@string/history"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/historyReservedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/bookings"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/historyListingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/listings"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
    </LinearLayout>

</LinearLayout>
